Link Davie's burgers

--- a/index.html
+++ b/index.html
@@ -528,7 +528,8 @@
                     alt="Burgers"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="src/davie-s-burgers/index.html" rel="noopener"
+                    <a class="venobox" data-gall="myGallery" href="https://davies-burgers.firebaseapp.com"
+                      rel="noopener"
                       target="_blank">
                       <h4>Davie's Burgers</h4>
                       <span>Web Design</span>
