Add link to Watch Shop

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Crusing Dubrovnik">
-                  <img src="dist/img/portfolio/boat.jpg" alt="Boat"/>
+                  <img src="dist/img/portfolio/boat.jpg" alt="Boat" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -407,7 +407,7 @@
                       target="_blank">
                       <h4>Cruising Dubrovnik</h4>
                       <span>Web Design</span>
-                      <hr/>
+                      <hr />
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Bootstrap</kbd>
@@ -429,14 +429,14 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Fly Design"><img src="dist/img/portfolio/fly.jpg"
-                    alt="Fly Design"/></a>
+                    alt="Fly Design" /></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="https://fly-design-f6801.firebaseapp.com" rel="noopener"
-                      target="_blank">
+                    <a class="venobox" data-gall="myGallery" href="https://fly-design-f6801.firebaseapp.com"
+                      rel="noopener" target="_blank">
                       <h4>Fly Design</h4>
                       <span>Web Design</span>
-                      <hr/>
+                      <hr />
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Animate.css</kbd>
@@ -456,13 +456,13 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Bead Art Shop"><img src="dist/img/portfolio/bead.jpg"
-                    alt="Bead Art Shop"/></a>
+                    alt="Bead Art Shop" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="coming-soon.html">
                       <h4>Bead Art Shop</h4>
                       <span>Web Design</span>
-                      <hr/>
+                      <hr />
                     </a>
                   </div>
                 </div>
@@ -475,13 +475,13 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Books App"><img src="dist/img/portfolio/books.jpg"
-                    alt="Libraries"/></a>
+                    alt="Libraries" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
                       <h4>Pocket Book</h4>
                       <span>Web Development</span>
-                      <hr/>
+                      <hr />
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Bootstrap</kbd>
@@ -494,46 +494,44 @@
           </div>
           <!-- single-awesome-project end -->
 
-         <!-- single-awesome-project start -->
-         <div class="col-md-3 col-sm-4 col-xs-12 development">
-           <div class="single-awesome-project">
-             <div class="awesome-img">
-               <a href="#" aria-label="Read more about Agenda App"><img src="dist/img/portfolio/agenda.jpg"
-                   alt="Agenda" /></a>
-               <div class="add-actions text-center">
-                 <div class="project-dec">
-                   <a class="venobox" data-gall="myGallery" href="https://react-agenda-app.firebaseapp.com"
-                     rel="noopener"
-                     target="_blank">
-                     <h4>Agenda</h4>
-                     <span>Web Development</span>
-                     <hr />
-                     <kbd>Html</kbd>
-                     <kbd>Css</kbd>
-                     <kbd>React.js</kbd>
-                     <kbd>FireBase</kbd>
-                   </a>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <!-- single-awesome-project end -->
+          <!-- single-awesome-project start -->
+          <div class="col-md-3 col-sm-4 col-xs-12 development">
+            <div class="single-awesome-project">
+              <div class="awesome-img">
+                <a href="#" aria-label="Read more about Agenda App"><img src="dist/img/portfolio/agenda.jpg"
+                    alt="Agenda" /></a>
+                <div class="add-actions text-center">
+                  <div class="project-dec">
+                    <a class="venobox" data-gall="myGallery" href="https://react-agenda-app.firebaseapp.com"
+                      rel="noopener" target="_blank">
+                      <h4>Agenda</h4>
+                      <span>Web Development</span>
+                      <hr />
+                      <kbd>Html</kbd>
+                      <kbd>Css</kbd>
+                      <kbd>React.js</kbd>
+                      <kbd>FireBase</kbd>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- single-awesome-project end -->
 
           <!-- single-awesome-project start -->
           <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Davie's burger"><img src="dist/img/portfolio/burger.jpg"
-                    alt="Burgers"/></a>
+                    alt="Burgers" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="https://davies-burgers.firebaseapp.com"
-                      rel="noopener"
-                      target="_blank">
+                      rel="noopener" target="_blank">
                       <h4>Davie's Burgers</h4>
                       <span>Web Design</span>
-                      <hr/>
+                      <hr />
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Hover.css</kbd>
@@ -550,14 +548,14 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Tsunami Cafe"><img src="dist/img/portfolio/cafe.jpg"
-                    alt="Cafe"/></a>
+                    alt="Cafe" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/tsunami-coffee/index.html" rel="noopener"
                       target="_blank">
                       <h4>Tsunami Cafe</h4>
                       <span>Web Design</span>
-                      <hr/>
+                      <hr />
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Bootstrap</kbd>
@@ -575,14 +573,14 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Watch Shop"><img src="dist/img/portfolio/watch.jpg"
-                    alt="Watches"/></a>
+                    alt="Watches" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="src/watch-shop/index.html" rel="noopener"
+                    <a class="venobox" data-gall="myGallery" href="https://watch-shop-47589.web.app" rel="noopener"
                       target="_blank">
                       <h4>Watch Shop</h4>
                       <span>Web Design</span>
-                      <hr/>
+                      <hr />
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Bootstrap</kbd>
@@ -624,14 +622,14 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Newspapers">
-                  <img src="dist/img/portfolio/news.jpg" alt="Newspapers"/>
+                  <img src="dist/img/portfolio/news.jpg" alt="Newspapers" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
                       <h4>Headlines</h4>
                       <span>Web Development</span>
-                      <hr/>
+                      <hr />
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>React.js</kbd>
