--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                     alt="Cafe" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="src/tsunami-coffee/index.html" rel="noopener"
+                    <a class="venobox" data-gall="myGallery" href="https://tsunami-coffee-2504f.firebaseapp.com" rel="noopener"
                       target="_blank">
                       <h4>Tsunami Cafe</h4>
                       <span>Web Design</span>
