Media query changes

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
       </div>
       <div class="row">
         <!-- single-well start-->
-        <div class="col-md-5 col-sm-6 col-xs-12">
+        <div class="col-md-5 col-sm-12 col-xs-12">
           <div class="about-image">
             <img src="dist/img/me.jpg" alt="image" class="image-responsive" />
           </div>
         </div>
         <!-- single-well end-->
-        <div class="col-md-7 col-sm-6 col-xs-12">
+        <div class="col-md-7 col-sm-12 col-xs-12">
           <div class="well-middle">
             <div class="single-well">
               <h4 class="sec-head">HELLO STRANGER! ~ Welcome to my site.</h4>
@@ -302,7 +302,7 @@
   <!-- End Service area -->
 
   <!-- our-skill-area start -->
-  <div class="our-skill-area fix hidden-sm">
+  <div class="our-skill-area fix hidden-sm hidden-xs">
     <div class="test-overly"></div>
     <div class="skill-bg area-padding-2">
       <div class="container">
