Random quote mashine project added into portfolio

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <title>Cuk Danijela Portfolio</title>
   <!-- Meta tag -->
   <meta charset="utf-8" />
-  <meta name="theme-color" content="#c7254e" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta
     content="cuk danijela, cuk danijela web-site, cuk-danijela portfolio, danijela cuk, danijela cuk web developer, danijela cuk frontend developer"
     name="keywords" />
   <meta content="Cuk Danijela Portfolio" name="description" />
-
+  <meta name="theme-color" content="#c7254e" />
   <!-- Favicons -->
   <link href="dist/img/favicon.png" rel="icon" />
   <link href="dist/img/apple-touch-icon.png" rel="apple-touch-icon" />
@@ -151,7 +150,9 @@
                 </li>
                 <li>
                   <i class="fa fa-check"></i> I like to design and code things from scratch and enjoy bringing ideas to
-                  life in the browser. Understanding of UX and Accessibility and optimizing applications for best
+                  life in the browser. </li>
+                <li>
+                  Understanding of UX and Accessibility and optimizing applications for best
                   performance and user experience.
                 </li>
                 <li>
@@ -551,8 +552,8 @@
                     alt="Cafe" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="https://tsunami-coffee-2504f.firebaseapp.com" rel="noopener"
-                      target="_blank">
+                    <a class="venobox" data-gall="myGallery" href="https://tsunami-coffee-2504f.firebaseapp.com"
+                      rel="noopener" target="_blank">
                       <h4>Tsunami Cafe</h4>
                       <span>Web Design</span>
                       <hr />
@@ -621,13 +622,14 @@
           <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Newspapers">
-                  <img src="dist/img/portfolio/news.jpg" alt="Newspapers" />
+                <a href="#" aria-label="Check out your random quote">
+                  <img src="dist/img/portfolio/news.jpg" alt="Quotes" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="#">
-                      <h4>Headlines</h4>
+                    <a class="venobox" data-gall="myGallery" href="https://random-quote-machine-938d1.firebaseapp.com" rel="noopener"
+                      target="_blank">
+                      <h4>Random quote machine</h4>
                       <span>Web Development</span>
                       <hr />
                       <kbd>Html</kbd>
