Delete page coming soon

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   <i class="fa fa-check"></i> I like to design and code things from scratch and enjoy bringing ideas to
                   life in the browser. </li>
                 <li>
-                  Understanding of UX and Accessibility and optimizing applications for best
+                  <i class="fa fa-check"></i> Understanding of UX and Accessibility and optimizing applications for best
                   performance and user experience.
                 </li>
                 <li>
@@ -460,10 +460,11 @@
                     alt="Bead Art Shop" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="coming-soon.html">
+                    <a class="venobox" data-gall="myGallery" href="#">
                       <h4>Bead Art Shop</h4>
                       <span>Web Design</span>
                       <hr />
+                      <kbd>Work in progress..</kbd>
                     </a>
                   </div>
                 </div>
