--- a/index.html
+++ b/index.html
@@ -209,6 +209,97 @@
   </div>
   <!-- End About area -->
 
+  <!-- Start Service area -->
+  <div id="services" class="services-area area-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="section-headline services-head text-center">
+            <h2>Services</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="services-contents">
+          <!-- Start Left services -->
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <div class="about-move">
+              <div class="services-details">
+                <div class="single-services">
+                  <span class="services-icon">
+                    <i class="fa fa-desktop"></i>
+                  </span>
+                  <h4>Responsive Design</h4>
+                  <p>
+                    Approach to web page creation that makes use of flexible
+                    layouts, images and media queries.
+                  </p>
+                </div>
+              </div>
+              <!-- end about-details -->
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <!-- end col-md-4 -->
+            <div class=" about-move">
+              <div class="services-details">
+                <div class="single-services">
+                  <span class="services-icon">
+                    <i class="fa fa-lightbulb-o"></i>
+                  </span>
+                  <h4>Creative Idea</h4>
+                  <p>
+                    Creativity is a quality that is highly valued, but not
+                    always well understood.
+                  </p>
+                </div>
+              </div>
+              <!-- end about-details -->
+            </div>
+          </div>
+          <!-- End Left services -->
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <div class="about-move">
+              <div class="services-details">
+                <div class="single-services">
+                  <span class="services-icon">
+                    <i class="fa fa-code"></i>
+                  </span>
+                  <h4>Clean & Nice Code</h4>
+                  <p>
+                    The quality of the code is directly correlated to the
+                    maintainability of the product.
+                  </p>
+                </div>
+              </div>
+              <!-- end about-details -->
+            </div>
+          </div>
+
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <!-- end col-md-4 -->
+            <div class=" about-move">
+              <div class="services-details">
+                <div class="single-services">
+                  <span class="services-icon">
+                    <i class="fa fa-connectdevelop"></i>
+                  </span>
+                  <h4>Support</h4>
+                  <p>
+                    If you ever need information or help with lines of code
+                    I'm here!
+                  </p>
+                </div>
+              </div>
+              <!-- end about-details -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Service area -->
+
   <!-- Start portfolio Area -->
   <div id="portfolio" class="portfolio-area area-padding fix">
     <div class="container">
