--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col-md-7 col-sm-12 col-xs-12">
           <div class="well-middle">
             <div class="single-well">
-              <h4 class="sec-head">HELLO STRANGER! ~ Welcome to my site.</h4>
+              <h4 class="sec-head">HELLO STRANGER ~ Welcome to my site.</h4>
               <p>
                 As you may have read my name is Danijela and I am a web developer.
                 Nice to meet you!
@@ -500,6 +500,8 @@
                       <kbd>Css</kbd>
                       <kbd>Bootstrap</kbd>
                       <kbd>Jquery</kbd>
+                      <kbd>FireBase</kbd>
+                      <kbd>Gulp.js</kbd>
                     </a>
                   </div>
                 </div>
