--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
                       <hr />
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
+                      <kbd>SCss</kbd>
                       <kbd>Bootstrap</kbd>
                       <kbd>Jquery</kbd>
                       <kbd>FireBase</kbd>
