--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-4 col-xs-12 design">
+          <!-- <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Tsunami Cafe"><img src="dist/img/portfolio/cafe.jpg"
@@ -508,7 +508,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- single-awesome-project end -->
 
           <!-- single-awesome-project start -->
