--- a/index.html
+++ b/index.html
@@ -461,6 +461,32 @@
 
           <!-- single-awesome-project start -->
           <div class="col-md-3 col-sm-4 col-xs-12 design">
+                      <div class="single-awesome-project">
+                        <div class="awesome-img">
+                          <a href="#" aria-label="Read more posts about dogs"><img src="assets/img/portfolio/dogs.jpg"
+                              alt="Dog posts" /></a>
+                          <div class="add-actions text-center">
+                            <div class="project-dec">
+                              <a class="venobox" data-gall="myGallery" href="https://dog-lovers-posts.web.app"
+                                rel="noopener" target="_blank">
+                                <h4>Dog lovers posts</h4>
+                                <span>Web development</span>
+                                <hr />
+                                <kbd>Html</kbd>
+                                <kbd>Css</kbd>
+                                <kbd>React Bootstrap</kbd>
+                                <kbd>React.js</kbd>
+                                <kbd>FireBase</kbd>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+          <!-- single-awesome-project end -->
+
+          <!-- single-awesome-project start -->
+          <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Davie's burger"><img src="dist/img/portfolio/burger.jpg"
@@ -483,6 +509,7 @@
             </div>
           </div>
           <!-- single-awesome-project end -->
+
           <!-- single-awesome-project start -->
           <!-- <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
