--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
           <!-- single-awesome-project end -->
 
           <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-4 col-xs-12 design">
+          <div class="col-md-3 col-sm-4 col-xs-12 development">
                       <div class="single-awesome-project">
                         <div class="awesome-img">
                           <a href="#" aria-label="Read more posts about dogs"><img src="assets/img/portfolio/dogs.jpg"
@@ -469,7 +469,7 @@
                             <div class="project-dec">
                               <a class="venobox" data-gall="myGallery" href="https://dog-lovers-posts.web.app"
                                 rel="noopener" target="_blank">
-                                <h4>Dog lovers posts</h4>
+                                <h4>Dog lovers</h4>
                                 <span>Web development</span>
                                 <hr />
                                 <kbd>Html</kbd>
