--- a/index.html
+++ b/index.html
@@ -501,7 +501,8 @@
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Hover.css</kbd>
-                      <kbd>JavaScript</kbd>
+                      <kbd>Jquery</kbd>
+                      <kbd>Firebase</kbd>
                     </a>
                   </div>
                 </div>
