corrected download link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h1 id="script-font" class="clip"> </h1>
             <div>
               <!-- <a class="ready-btn learn-more page-scroll" href="#portfolio">View Portfolio</a> -->
-              <a class="ready-btn learn-more page-scroll" href="Cuk_Danijela_Resume.pdf" download>Download Resume</a>
+              <a class="ready-btn learn-more page-scroll" href="Danijela_Cuk_Resume.pdf" download>Download Resume</a>
             </div>
           </div>
             <div class="field">
