update portfolio section

--- a/index.html
+++ b/index.html
@@ -469,20 +469,41 @@
                             <div class="project-dec">
                               <a class="venobox" data-gall="myGallery" href="https://dog-lovers-posts.web.app"
                                 rel="noopener" target="_blank">
-                                <h4>Dog lovers</h4>
+                                <h4>Dog lovers post</h4>
                                 <span>Web development</span>
                                 <hr />
-                                <kbd>Html</kbd>
-                                <kbd>Css</kbd>
-                                <kbd>React Bootstrap</kbd>
                                 <kbd>React.js</kbd>
-                                <kbd>FireBase</kbd>
+                                <kbd>REST API</kbd>
                               </a>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
+          <!-- single-awesome-project end -->
+
+            <!-- single-awesome-project start -->
+          <div class="col-md-3 col-sm-4 col-xs-12 design">
+            <div class="single-awesome-project">
+              <div class="awesome-img">
+                <a href="#" area-label="Read more about CRUD Application"><img src="dist/img/portfolio/CRUD.jpg"
+                    alt="React CRUD app" /></a>
+                <div class="add-actions text-center text-center">
+                  <div class="project-dec">
+                    <a class="venobox" data-gall="myGallery" href="https://react-crud-app-d675a.web.app"
+                      rel="noopener" target="_blank">
+                      <h4>CRUD Application</h4>
+                      <span>Web Development</span>
+                      <hr />
+                      <kbd>REST API</kbd>
+                      <kbd>PHP</kbd>
+                      <kbd>React.js</kbd>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- single-awesome-project end -->
 
           <!-- single-awesome-project start -->
@@ -602,8 +623,6 @@
                       <h4>Random quote machine</h4>
                       <span>Web Development</span>
                       <hr />
-                      <kbd>Html</kbd>
-                      <kbd>Css</kbd>
                       <kbd>React.js</kbd>
                     </a>
                   </div>
