update resume file

--- a/index.html
+++ b/index.html
@@ -130,53 +130,37 @@
             <div class="single-well">
               <h4 class="sec-head">HELLO STRANGER ~ Welcome to my site.</h4>
               <p>
-                As you may have read my name is Danijela and I am a web developer.
-                Nice to meet you!
+                As you may have read my name is Danijela and I am a web developer. Nice to meet you!
               </p>
-              <p>I have over 3 years of experience in working with web technologies, but my main focus is a front-end
-                web development. I'm a self-taught programmer and passionate learner with interest in web development
-                and
-                understanding of the entire process (design, development, and deployment).
-
-                Now I know that the best way to learn something is by solving tasks and complex problems alone or in the
-                team. I get an along fine in a team, work with predefined code standards and maintain the code quality
-                at a high level, but also taking responsibility for my mistakes, helping others and guiding them if
-                necessary.
+              <p>I have over 3 years of experience in working with web technologies, but my main focus is front-end web development. I'm a self-taught programmer and passionate learner with an interest in web development and an understanding of the entire process (design, development, and deployment). Now I know that the best way to learn something is by solving tasks and complex problems alone or in the team. I get along fine in a team, work with predefined code standards, and maintain the code quality at a high level, but also take responsibility for my mistakes, helping others and guiding them if necessary.
               </p>
 
               <ul>
                 <li>
-                  <i class="fa fa-check"></i> I have experience with web technologies such as HTML5, CSS3, JS and
-                  Frameworks such as Jquery, React.js, Bootstrap, etc.
+                  <i class="fa fa-check"></i>  I have experience with web technologies such as HTML5, CSS3, JS and Frameworks such as Jquery, React.js, Bootstrap, etc.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> I like to design and code things from scratch and enjoy bringing ideas to
-                  life in the browser. </li>
+                  <i class="fa fa-check"></i> I like to design and code things from scratch and enjoy bringing ideas to life in the browser. </li>
                 <li>
-                  <i class="fa fa-check"></i> Understanding of UX and Accessibility and optimizing applications for best
-                  performance and user experience.
+                  <i class="fa fa-check"></i> Understanding of UX and Accessibility and optimizing applications for best performance and user experience.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> I'm focused on frontend development but I also have some knowledge about
-                  how to get information out of a database or change a line of PHP.
+                  <i class="fa fa-check"></i> I'm focused on frontend development but I also have some knowledge about how to get information out of a database or change a line of PHP.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Familiarity with cross-browser and page-load optimization - the basics
-                  about the cross-browser optimizations/support, understanding of SEO principles.
+                  <i class="fa fa-check"></i> Familiarity with cross-browser and page-load optimization - the basics about cross-browser optimizations/support, understanding of SEO principles.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Proficiency in graphic design software such as Adobe Photoshop and basics
-                  of video editing.
+                  <i class="fa fa-check"></i>  Proficiency in graphic design software such as Adobe Photoshop and basics of video editing.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Familiarity with handling data using AJAX and Jquery, manipulation of DOM.
+                  <i class="fa fa-check"></i>  Familiarity with handling data using AJAX and Jquery, and manipulation of DOM.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Experience with version control systems (Git, GitHub, GitLab) and with
-                  automation tools such as Gulp, as well as with package managers like NPM.
+                  <i class="fa fa-check"></i>  Experience with version control systems (Git, GitHub, GitLab) and with automation tools such as Gulp, as well as with package managers like NPM.
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Solid understanding debugging using the browser dev-tools.
+                  <i class="fa fa-check"></i> Solid understanding of debugging using the browser dev tools.
                 </li>
               </ul>
             </div>
