update projects - countries

--- a/index.html
+++ b/index.html
@@ -566,6 +566,37 @@
             </div>
             <!-- single-awesome-project end -->
 
+              <!-- single-awesome-project start -->
+            <div class="col-md-3 col-sm-4 col-xs-12 development">
+              <div class="single-awesome-project">
+                <div class="awesome-img">
+                  <a href="#" area-label="Read more about Countries"
+                    ><img src="dist/img/portfolio/countries.jpg" alt="Countries"
+                  /></a>
+                  <div class="add-actions text-center text-center">
+                    <div class="project-dec">
+                      <a
+                        class="venobox"
+                        data-gall="myGallery"
+                        href="https://countries-87c11.web.app"
+                        rel="noopener"
+                        target="_blank"
+                      >
+                        <h4>Where in the world?</h4>
+                        <span>Web Development</span>
+                        <hr />
+                        <kbd>React</kbd>
+                        <kbd>React Bootstrap</kbd>
+                        <kbd>FireBase</kbd>
+                        <kbd>REST API</kbd>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single-awesome-project end -->
+
             <!-- single-awesome-project start -->
             <div class="col-md-3 col-sm-4 col-xs-12 development">
               <div class="single-awesome-project">
@@ -613,12 +644,12 @@
                         rel="noopener"
                         target="_blank"
                       >
-                        <h4>CRUD Application</h4>
+                        <h4>User Managment</h4>
                         <span>Web Development</span>
                         <hr />
                         <kbd>REST API</kbd>
                         <kbd>PHP</kbd>
-                        <kbd>React.js</kbd>
+                        <kbd>React</kbd>
                       </a>
                     </div>
                   </div>
