--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             </div>
             <!-- single-awesome-project end -->
             <!-- single-awesome-project start -->
-            <div class="col-md-3 col-sm-4 col-xs-12 development">
+            <div class="col-md-3 col-sm-4 col-xs-12 design">
               <div class="single-awesome-project">
                 <div class="awesome-img">
                   <a href="#" area-label="Read more about Bead Art Shop"
@@ -627,13 +627,13 @@
             <!-- single-awesome-project end -->
 
             <!-- single-awesome-project start -->
-            <div class="col-md-3 col-sm-4 col-xs-12 design">
+            <div class="col-md-3 col-sm-4 col-xs-12 development">
               <div class="single-awesome-project">
                 <div class="awesome-img">
-                  <a href="#" area-label="Read more about CRUD Application"
+                  <a href="#" area-label="Read more about User Managment Application"
                     ><img
                       src="dist/img/portfolio/CRUD.jpg"
-                      alt="React CRUD app"
+                      alt="User Managment Application"
                   /></a>
                   <div class="add-actions text-center text-center">
                     <div class="project-dec">
